# microservice-with-rust

./: .env  Cargo.toml  Dockerfile  README.md  server.sh
certs/: cert.pem  key.pem
src/: auth.rs  constants.rs  handler.rs  health.rs  main.rs  utils.rs
src/auth/: jwt.rs  login.rs  mod.rs  register.rs
src/handler/: mod.rs  product.rs
src/middleware/: jwt.rs  mod.rs  rate_limit.rs  tls.rs
src/routing/: gateway.rs  load_balancer.rs  mod.rs
src/services/accommodation/: .env  Cargo.toml
src/services/accommodation/src/: db.rs  handlers.rs  identify.rs  main.rs  response.rs
src/services/authentication/: .env  Cargo.toml  Dockerfile
src/services/authentication/src/: db.rs  handlers.rs  identify.rs  jwt.rs  main.rs
src/services/booking/: Cargo.toml
src/services/booking/src/: main.rs  models.rs
src/services/comment/: Cargo.toml  Dockerfile
src/services/comment/src/: db.rs  handlers.rs  main.rs  models.rs
src/services/follow/: .gitignore  Cargo.toml  Dockerfile
src/services/follow/src/: db.rs  handlers.rs  main.rs  models.rs
src/services/payment/src/: models.rs
src/services/post/: .env  Cargo.toml  Dockerfile  docker-compose.yml
src/services/post/src/: db.rs  handlers.rs  identify.rs  main.rs  models.rs  utils.rs
src/services/product/: Cargo.toml
src/services/product/src/: db.rs  handlers.rs  main.rs  models.rs
src/services/product/src/handlers/: category.rs  product.rs
src/services/property/: Cargo.toml
src/services/property/src/: db.rs  handlers.rs  identify.rs  main.rs  models.rs  response.rs
src/services/storage/: .env  Cargo.toml  Dockerfile
src/services/storage/src/: db.rs  handlers.rs  identify.rs  main.rs  model.rs  response.rs  storage.rs  stream.rs  utils.rs
src/services/stores/: .env  Cargo.toml
src/services/stores/migrations/: 20250618024215_create_store_table.sql
src/services/stores/src/: handlers.rs  main.rs  routes.rs  store.rs
src/services/user/: .env  Cargo.toml  Dockerfile
src/services/user/src/: db.rs  handlers.rs  identify.rs  main.rs  models.rs
src/services/vote/: .env  Cargo.toml  Dockerfile
src/services/vote/src/: db.rs  handlers.rs  main.rs  middleware.rs  models.rs
src/utils/: validator.rs
(+1 files in other folders)
