[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]

actix-web = "*"
actix-service = "*"
actix-cors = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
futures = "*"

jsonwebtoken = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = "*"
futures-util = "*"
tracing = "*"
tracing-subscriber = "*"
dotenv = "*"