[package]
name = "follow"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "*"
mongodb = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
futures-util = "*"
regex = "*"
chrono = "*"
clap = { version = "*", features = ["derive"] }
futures = "*"
constant_time_eq = "0.3.1"
log = "*"
dotenv = "*"
env_logger = "*"