[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "*"
actix-multipart = "*"
actix-files = "*"
actix-cors = "*"
mongodb = "*"
async-trait = "*"
aws-sdk-s3 = "*"
futures = "*"
aws-config = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
futures-util = "*"
chrono = "*"
clap = { version = "*", features = ["derive"] }
image = "*"
mime_guess = "*"
uuid = { version = "*", features = ["v4"] }