[package]
name = "stores"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "time"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "*", features = ["serde"] }
dotenv = "*"
uuid = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
